syntax= "proto3";

package ShortReadQueryFive;
option java_package = "com.proto.ShortReadQuery5";
option java_multiple_files = true;

message Request {
  string subQuery = 1;
  int32 flag = 2;
  string instruction = 3;
  int32 message_id = 4;
  int32 person_id = 5;
  int32 query_id = 6;
  string temp_table_name = 7;
  int32 forum_id = 8;
}

message Response {
  string node_response = 1;
  int32 flag = 2;
  int32 query_id = 3;
}

message ShortReadQuery5Request {
  Request SRQ5Request = 1;
}

message ShortReadQuery5Response {
  Response SRQ5Response = 1;
}

service ShortReadQuery5Service {
  rpc ShortReadQuery5(ShortReadQuery5Request) returns (ShortReadQuery5Response) {};
}

